<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_address"/>

    <EditText
        android:id="@+id/edittext_device_address"
        android:layout_width="284dp"
        android:layout_height="93dp"
        android:hint="@string/ble_address" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_name"/>

    <EditText
        android:id="@+id/edittext_device_name"
        android:layout_width="289dp"
        android:layout_height="70dp"
        android:hint="@string/ble_devicename" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonsave" />
</LinearLayout>